ADD component not-avaiable en modulo shared. IMPORT component not-avaiable en componentes no disponibles

--- a/src/app/modules/home/components/overview/overview.component.html
+++ b/src/app/modules/home/components/overview/overview.component.html
@@ -1,1 +1,1 @@
-<p>overview component from home works!</p>
+<app-not-avaiable [nameComponent]="'overView'" [nameModule]="'Home'"></app-not-avaiable>
