ADD angular material module. IMPORT angular material module en componente not-avaiable para su uso

--- a/src/app/shared/components/not-avaiable/not-avaiable.component.html
+++ b/src/app/shared/components/not-avaiable/not-avaiable.component.html
@@ -8,5 +8,6 @@
     <section>
         <h3>Modulo al que se trata de acceder {{nameModule}} - Componente {{nameComponent}}</h3>
     </section>
+    <button mat-flat-button color="primary">Volver al inicio</button>
 
 </article>>
